@@ -1,3 +1,7 @@
+2005-12-20  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpscrolledpreview.c: removed unused variable.
+
 2005-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/*.c: port to G_DEFINE_TYPE() and friends. Some
